[IMP] product*: update product form view layout
*: sale, stock

With this commit, The following changes are made to product form

- Removed the 'Update Quantity', 'Replenish', and 'Print Labels' buttons
  from the product form header for a cleaner layout.
- Removed 'Print Labels' button from product list view.
- Moved "Replenish" and "Print Labels" options to the server action menu
  (cog menu) for better organization.
- Removed the tooltip for the product type set to 'Goods'.
- Added the "Quantity On Hand" field, which is editable only when there
  are no multiple variants or when storage locations are disabled.
  If there are multiple variants or storage locations are enabled,
  the 'Update' button is displayed.
- Removed the 'On Hand Stat' button
- Improved the "Forecast Stat" button to display both 'On Hand Quantity'
  and 'Forecast Quantity' in a single column for better readability.

Task: 4385237
Part-of: odoo/odoo#191742
Related: odoo/enterprise#77849
Related: odoo/upgrade#6980
Signed-off-by: William Henrotin (whe) <whe@odoo.com>

--- a/addons/product/views/product_template_views.xml
+++ b/addons/product/views/product_template_views.xml
@@ -6,9 +6,6 @@
         <field name="priority">10</field>
         <field name="arch" type="xml">
             <list string="Product" multi_edit="1" sample="1">
-            <header>
-                <button string="Print Labels" type="object" name="action_open_label_layout"/>
-            </header>
                 <field name="product_variant_count" column_invisible="True"/>
                 <field name="sale_ok" column_invisible="True"/>
                 <field name="currency_id" column_invisible="True"/>
@@ -194,6 +191,17 @@
                 You must define a product for everything you sell or purchase,
                 whether it's a storable product, a consumable or a service.
             </p>
+        </field>
+    </record>
+
+    <record id="action_product_template_print_labels" model="ir.actions.server">
+        <field name="name">Print Labels</field>
+        <field name="model_id" ref="product.model_product_template"/>
+        <field name="binding_model_id" ref="product.model_product_template"/>
+        <field name="state">code</field>
+        <field name="code">
+            if records:
+                action = records.action_open_label_layout()
         </field>
     </record>
 
