[IMP] base,*: use x2many kanban for server actions
*: {test_}base_automation, mail, sms, web

This commit will make the "Multi actions" server actions form view to
present their child actions similarly to the automation rules form,
which uses an inline x2many kanban view.

In order to achieve this it has been necessary to:
- change the child_ids server actions field type from m2m to one2many
- move the whole automatic naming logic of automation rules' actions to
  the server actions themselves

closes odoo/odoo#190709

Task: opw-4370092
Related: odoo/enterprise#76004
Related: odoo/upgrade#6959
Signed-off-by: Bruno Boi (boi) <boi@odoo.com>

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -79,10 +79,10 @@
         @include media-only(screen) {
             --ControlPanel-border-bottom: none;
         }
+    }
 
-        &.o_field_x2many_kanban .o_kanban_ghost {
-            display: none;
-        }
+    &.o_field_x2many_kanban .o_kanban_ghost {
+        display: none;
     }
 }
 
@@ -170,8 +170,11 @@
     }
 
     .o_dragged {
-        transform: rotate(-3deg);
         transition: transform 0.6s, box-shadow 0.3s;
+
+        &:not(.o_draggable_norotate) {
+            transform: rotate(-3deg);
+        }
 
         .dropdown {
             display: none;
