--- a/addons/base_automation/views/base_automation_views.xml
+++ b/addons/base_automation/views/base_automation_views.xml
@@ -139,70 +139,9 @@
                                 <field
                                     name="action_server_ids"
                                     widget="one2many"
-                                    class="o_base_automation_actions_field"
-                                    context="{'default_model_id': model_id, 'form_view_ref': 'base_automation.ir_actions_server_view_form_automation'}"
-                                >
-                                    <kanban>
-                                        <control>
-                                            <create string="Add an action" />
-                                        </control>
-                                        <field name="state"/>
-                                        <field name="evaluation_type"/>
-                                        <field name="value"/>
-                                        <field name="value_field_to_show"/>
-                                        <field name="update_field_type"/>
-                                        <field name="update_m2m_operation"/>
-                                        <templates>
-                                            <t t-name="card" class="flex-row align-items-center gap-1">
-                                                <field name="sequence" widget="handle" class="px-1" />
-                                                <!-- Icon section -->
-                                                <i
-                                                    data-name="server_action_icon"
-                                                    t-att-title="record.state.value"
-                                                    class="fa fa-fw"
-                                                    t-att-class="{
-                                                        'code': 'fa-file-code-o',
-                                                        'object_create': 'fa-edit',
-                                                        'object_write': 'fa-refresh',
-                                                        'multi': 'fa-list-ul',
-                                                        'mail_post': 'fa-envelope',
-                                                        'followers': 'fa-user-o',
-                                                        'remove_followers': 'fa-user-times',
-                                                        'next_activity': 'fa-clock-o',
-                                                        'sms': 'fa-comments-o',
-                                                        'webhook': 'fa-paper-plane',
-                                                    }[record.state.raw_value]"
-                                                />
-                                                <i class="fa fa-warning text-warning px-2 m-0" invisible="not warning" t-att-title="record.warning.raw_value"/>
-                                                <field name="name" class="text-truncate" />
-                                                <t invisible="state != 'object_write'">
-                                                    <t invisible="not (update_field_type == 'many2many' and update_m2m_operation == 'clear') or evaluation_type != 'value'">
-                                                        <span>by clearing it</span>
-                                                    </t>
-                                                    <t invisible="not (update_field_type == 'many2many' and update_m2m_operation == 'add') or evaluation_type != 'value'">
-                                                        <span>by adding</span><field name="resource_ref"/>
-                                                    </t>
-                                                    <t invisible="not (update_field_type == 'many2many' and update_m2m_operation == 'remove') or evaluation_type != 'value'">
-                                                        <span>by removing</span><field name="resource_ref"/>
-                                                    </t>
-                                                    <t invisible="not (update_field_type == 'many2many' and update_m2m_operation == 'set') or evaluation_type != 'value'">
-                                                        <span>by setting it to</span><field name="resource_ref"/>
-                                                        </t>
-                                                    <t invisible="update_field_type == 'many2many' and evaluation_type == 'value'">
-                                                        <span invisible="evaluation_type != 'value'">to</span>
-                                                        <span invisible="evaluation_type != 'equation'">as</span>
-                                                        <field name="resource_ref" invisible="not (value_field_to_show == 'resource_ref' and evaluation_type == 'value')" />
-                                                        <field name="selection_value" invisible="not (value_field_to_show == 'selection_value' and evaluation_type == 'value')" class="d-inline"/>
-                                                        <field name="update_boolean_value" invisible="not (value_field_to_show == 'update_boolean_value' and evaluation_type == 'value')" class="d-inline"/>
-                                                        <em invisible="not (value_field_to_show == 'value' and evaluation_type == 'value')" class="d-inline"><field name="value"/></em>
-                                                        <code invisible="not (evaluation_type == 'equation')"><field name="value" /></code>
-                                                    </t>
-                                                </t>
-                                                <button type="delete" name="delete" class="btn fa fa-trash fa-xl px-3 ms-auto" title="Delete Action" />
-                                            </t>
-                                        </templates>
-                                    </kanban>
-                                </field>
+                                    mode="kanban"
+                                    context="{'default_model_id': model_id, 'is_modal': 1}"
+                                />
                             </page>
                             <page string="Notes" name="notes">
                                 <field name="description" placeholder="Keep track of what this automation does and why it exists..."/>
