[REF] pos*: use monetary field
point_of_sale, pos_online_payment, l10n_se_pos, pos_pricer

Before this commit:
- using Float fields to display currency values.
- Some views did not display monetary data correctly,.

After this commit:
- All currency-related fields have been replaced with Monetary fields instead of
  Float fields.
- Views have been updated to follow the new approach for displaying monetary
  data consistently.

Related Enterprise PR: https://github.com/odoo/enterprise/pull/76173
Related Upgrade PR: https://github.com/odoo/upgrade/pull/7298

Task-4424052

--- a/addons/point_of_sale/views/point_of_sale_dashboard.xml
+++ b/addons/point_of_sale/views/point_of_sale_dashboard.xml
@@ -155,7 +155,7 @@
                                         <div class="col-6">
                                             <span>Balance</span>
                                         </div>
-                                        <field name="last_session_closing_cash" widget="monetary" class="col-6"/>
+                                        <field name="last_session_closing_cash" class="col-6"/>
                                     </div>
                                 </t>
                                 
