--- a/addons/point_of_sale/views/pos_config_view.xml
+++ b/addons/point_of_sale/views/pos_config_view.xml
@@ -162,7 +162,7 @@
                 <field name="company_id"  options="{'no_create': True}" groups="base.group_multi_company"/>
                 <field name="last_session_closing_date" string="Closing"/>
                 <field name="currency_id" column_invisible="True"/>
-                <field name="last_session_closing_cash" widget="monetary" string="Balance"/>
+                <field name="last_session_closing_cash" string="Balance"/>
             </list>
         </field>
     </record>
