--- a/addons/point_of_sale/views/pos_payment_views.xml
+++ b/addons/point_of_sale/views/pos_payment_views.xml
@@ -7,6 +7,7 @@
             <form string="Payments" create="0" edit="0" delete="0">
                 <sheet>
                     <group>
+                        <field name="currency_id" invisible="1" />
                         <field name="session_id" readonly="0"/>
                         <field name="pos_order_id"/>
                         <field name="amount" readonly="0"/>
