--- a/addons/point_of_sale/views/pos_order_report_view.xml
+++ b/addons/point_of_sale/views/pos_order_report_view.xml
@@ -31,13 +31,14 @@
             <field name="arch" type="xml">
                 <list string="Point of Sale Analysis">
                     <field name="date"/>
+                    <field name="currency_id" column_invisible="True"/>
                     <field name="order_id" optional="hide"/>
                     <field name="partner_id" optional="hide"/>
                     <field name="product_id" optional="show"/>
                     <field name="product_categ_id" optional="show"/>
                     <field name="config_id" optional="hide"/>
                     <field name="company_id" optional="show" groups="base.group_multi_company"/>
-                    <field name="price_total" optional="show"/>
+                    <field name="price_total" optional="show" sum="sum"/>
                     <field name="state" optional="show"/>
                 </list>
             </field>
