--- a/addons/point_of_sale/views/pos_session_view.xml
+++ b/addons/point_of_sale/views/pos_session_view.xml
@@ -83,6 +83,7 @@
         <field name="model">pos.session</field>
         <field name="arch" type="xml">
             <list string="Point of Sale Session" create="0" sample="1">
+                <field name="currency_id" column_invisible="True" />
                 <field name="name" decoration-bf="1"/>
                 <field name="config_id" />
                 <field name="user_id" widget="many2one_avatar_user" readonly="state != 'opening_control'"/>
