--- a/addons/marketing_card/views/card_card_views.xml
+++ b/addons/marketing_card/views/card_card_views.xml
@@ -47,4 +47,12 @@
             </p>
         </field>
     </record>
+
+    <record id="action_download_images" model="ir.actions.server">
+        <field name="name">Marketing Card: Download Image</field>
+        <field name="model_id" ref="model_card_card"/>
+        <field name="binding_model_id" ref="model_card_card"/>
+        <field name="state">code</field>
+        <field name="code">action = records.action_download_images()</field>
+    </record>
 </odoo>
