[IMP] marketing_card: i18n addition

--- a/addons/marketing_card/views/card_dimension_views.xml
+++ b/addons/marketing_card/views/card_dimension_views.xml
@@ -4,7 +4,7 @@
         <field name="name">card.dimension.view.form</field>
         <field name="model">card.dimension</field>
         <field name="arch" type="xml">
-            <form string="Card Dimension">
+            <form string="Marketing Card Dimension">
                 <sheet>
                     <group>
                         <group>
@@ -20,7 +20,7 @@
     </record>
 
     <record id="card_dimension_action" model="ir.actions.act_window">
-        <field name="name">Card Dimension</field>
+        <field name="name">Marketing Card Dimension</field>
         <field name="res_model">card.dimension</field>
         <field name="view_mode">list,form</field>
         <field name="help" type="html">
