[IMP] l10n_latam_check: Add checks table inside payment report
closes odoo/odoo#193579

Signed-off-by: Laurent Smet (las) <las@odoo.com>

--- a/addons/l10n_ar_withholding/views/report_payment_receipt_templates.xml
+++ b/addons/l10n_ar_withholding/views/report_payment_receipt_templates.xml
@@ -1,6 +1,6 @@
 <odoo>
     <template inherit_id="account.report_payment_receipt_document" id="report_payment_receipt_document">
-        <xpath expr="//table" position="before">
+        <xpath expr="//table[@name='invoices']" position="before">
             <t t-if="o.l10n_ar_withholding_ids">
                 <table id="l10n_ar_withholding"  class="table table-sm">
                         <thead>
