[IMP] website: show a warning on 301 and 302 redirect if url is used.
301 and 302 redirects with 'URL from' that correspond to dynamic pages
(route of controllers for examples) don't work, and that is normal.
Here is the way urls are served at the moment:
            1. Controllers
            2. Pages
            3. Redirection

However, before this commit, nothing informed the user from setting a
dynamic page as the 'URL from' of a 301/302 redirect, which resulted in
no effect on the redirect.

After this commit, a warning is displayed in such cases.
Instead of raising a ValidationError that would prevent the user from
saving the record, we chose to display a warning in the form and
highlight ineffective records in the tree view.

The computed field also handles the following edge case: When the user
creates a redirect with a 'URL from' that points to a controller view of
a module that IS NOT installed, the redirect will initially work.
However, once the module is installed, the redirect will no longer
function properly. In this case, a warning will still appear after
installation, which would not have happened with a validation error at
the creation of the rule as we do for other validations (cfr:
_check_url_to()).

task-3861555

--- a/addons/website/views/website_rewrite.xml
+++ b/addons/website/views/website_rewrite.xml
@@ -11,6 +11,11 @@
                                 invisible="redirect_type != '308'"/>
                     </header>
                     <sheet>
+                        <div class="alert alert-warning" role="alert"
+                             invisible="not (url_from_is_controller and redirect_type in ['301','302'])">
+                            This redirection is ineffective because the 'URL from' is currently in use.
+                            If you want to rename it, you should use action '308 Redirect / Rewrite' instead.
+                        </div>
                         <group>
                             <group>
                                 <field name="name"/>
@@ -34,7 +39,8 @@
             <field name="name">website.rewrite.list</field>
             <field name="model">website.rewrite</field>
             <field name="arch" type="xml">
-                <list string="Website rewrites">
+                <list string="Website rewrites"
+                      decoration-warning="url_from_is_controller and redirect_type in ['301','302']">
                     <field name="sequence" widget="handle" />
                     <field name="redirect_type"/>
                     <field name="name"/>
