[IMP] website: remove debug-mode only for the redirect submenu
Before this commit the "Redirects" menu in the website configuration was
visible only if the debug mode was enabled.

After this commit, the menu is always visible for the 'Settings' group
users as it's parents menu item.

task-3861555

--- a/addons/website/views/website_rewrite.xml
+++ b/addons/website/views/website_rewrite.xml
@@ -67,8 +67,7 @@
             id="menu_website_rewrite"
             action="action_website_rewrite_list"
             parent="menu_website_global_configuration"
-            sequence="30"
-            groups="base.group_no_one"/>
+            sequence="30"/>
 
         <record id="view_rewrite_search" model="ir.ui.view">
             <field name="name">website.rewrite.search</field>
